--- a/src/index.css
+++ b/src/index.css
@@ -108,3 +108,10 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+
+ @media (min-width: 320px) and (max-width: 600px) {
+  .clinicalAction {
+    background-position: center center;
+  }
+ }
